--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.social.facebook.app-id=304515433060607
 spring.social.facebook.app-secret=2ae10badd9c2879311f2c6141e930978
 
-spring.social.google.app-id=399046802761.apps.googleusercontent.com
-spring.social.google.app-secret=_7C5-MveW4OUmRl2_pnTqqVk
+spring.social.google.app-id=360692818490-o1dimqsjob1bt97sme77o37a3dcbotrd.apps.googleusercontent.com
+spring.social.google.app-secret=xGwpFgCt0Rgj3_4DaLRAYBSp
 
 facebook.appNamespace=springboot
 
@@ -11,3 +11,5 @@ spring.datasource.name=vaadin-spring-social-showcase
 #spring.social.auto-connection-views=false
 
 vaadin.servlet.urlMapping=/ui/*
+
+server.port: ${port:8080}
