--- a/pom.xml
+++ b/pom.xml
@@ -231,8 +231,8 @@
 							<goal>resources</goal>
 							<!-- <goal>update-theme</goal> -->
 							<!-- <goal>update-widgetset</goal> -->
-							<goal>compile-theme</goal>
-							<goal>compile</goal>
+<!-- 							<goal>compile-theme</goal> -->
+<!-- 							<goal>compile</goal> -->
 						</goals>
 					</execution>
 				</executions>
